# eXaDrums

./: .cproject  .gitignore  .project  LICENSE  Makefile.am  README.md  Roadmap.md  configure.ac  eXaDrums-root.desktop  eXaDrums.desktop  eXaDrums.xpm  exadrums-root  exadrums.1  exadrums.appdata.xml  hihat.raw  out.raw
Data/: alsaConfig.xml  metronomeConfig.xml  sensorsConfig.xml  spiDev.xml  triggersConfig.xml
Data/Kits/: Default.xml  PadTest.xml  default.xml
Data/Kits/default/: .gitignore
Data/SoundBank/BassDrum/: BassDrum1.raw
Data/SoundBank/HiHat/: hihat.raw
Data/SoundBank/SnareDrum/: edge1.raw  snare1.raw
Debug/: eXaDrums  makefile  objects.mk  sources.mk
Debug/Data/Kits/: default.xml
Debug/Source/: subdir.mk
Debug/Source/Controllers/: subdir.mk
Debug/Source/Fader/: subdir.mk
Debug/Source/Gui/: MainWindow.d  subdir.mk
Debug/Source/IO/: Sensor.d  subdir.mk
Debug/Source/MainWindow/: subdir.mk
Debug/Source/Testing/: GuiHddTest.d  SerialSensorTest.d  SpiSensorTest.d  eXaDrumsHddTest.d  subdir.mk
Debug/Source/Widgets/: subdir.mk
Release/: eXaDrums  makefile  objects.mk  sources.mk
Release/Source/: .gitignore  helloworld.d  main.d  subdir.mk
Release/Source/Controllers/: subdir.mk
Release/Source/Fader/: subdir.mk
Release/Source/Gui/: MainWindow.d  subdir.mk
Release/Source/IO/: SpiSensor.d
Release/Source/MainWindow/: subdir.mk
Release/Source/Testing/: GuiHddTest.d  SensorTest.d  SerialSensorsTest.d  subdir.mk
Release/Source/Widgets/: subdir.mk
Source/: Ui.glade  exadrumsConfig.h  main.cpp  system.h
Source/Controller/: Controller.cpp  Controller.h
Source/Controllers/: CoachController.cpp  CoachController.h  ConfigController.cpp  ConfigController.h  KitController.cpp  KitController.h  MainController.cpp  MainController.h  MetronomeController.cpp  MetronomeController.h
Source/Controllers/MainPage/: MainPageController.cpp  MainPageController.h
Source/Fader/: Fader.cpp  Fader.h
Source/Gui/: MainWindow.cpp  MainWindow.h
Source/IO/: Sensor.cpp  Sensor.h  SpiSensor.cpp  SpiSensor.h
Source/MainWindow/: MainWindow.cpp  MainWindow.h
Source/Models/: Model.h
Source/Models/MainPage/: MainPageModel.cpp  MainPageModel.h
Source/Observers/: Observer.h  Subject.cpp  Subject.h
Source/Testing/: GuiHddTest.cpp  GuiHddTest.h  SensorTest.cpp  SensorTest.h  SerialSensorTest.cpp  SerialSensorTest.h  SerialSensorsTest.cpp  SerialSensorsTest.h  SpiSensorTest.cpp  SpiSensorTest.h  eXaDrumsHddTest.cpp  eXaDrumsHddTest.h
Source/Util/: ErrorHandler.h  Util.h
Source/Views/: Page.h  Pages.h
Source/Views/MainPage/: MainPageView.cpp  MainPageView.h
Source/Widgets/: Fader.cpp  Fader.h  InstrumentSelector.cpp  InstrumentSelector.h  InstrumentTypeSelector.cpp  InstrumentTypeSelector.h  SoundTypeAndPath.cpp  SoundTypeAndPath.h  SpiDev.h  TriggerIdAndLocation.cpp  TriggerIdAndLocation.h  TriggerSelector.cpp  TriggerSelector.h  VirtualPad.h
debian/: README  README.source  changelog  control  copyright  debhelper-build-stamp  exadrums.1  exadrums.cron.d.ex  exadrums.doc-base.EX  exadrums.install  exadrums.manpages  exadrums.substvars  files  install  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local  watch
debian/.debhelper/exadrums/: dbgsym-build-ids
debian/.debhelper/exadrums/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/exadrums/dbgsym-root/usr/share/doc/: exadrums-dbgsym
debian/patches/: add-makefile.diff  series
debian/upstream/: metadata
